--- a/src/newsite/polls/templates/polls/detail.html
+++ b/src/newsite/polls/templates/polls/detail.html
@@ -1,6 +1,25 @@
-<h1>{{ question.question_text }}</h1>
+<!-- <h1>{{ question.question_text }}</h1>
 <ul>
     {% for choice in question.choice_set.all %}
         <li>{{ choice.choice_set }}</li>
     {% endfor %}
-</ul>
+</ul> -->
+
+<h1>{{ question.question_text }}</h1>
+
+{% if error_messsage %}
+
+
+<strong>{{ error_messsage }}</strong>
+
+{% endif %}
+
+<form action="{% url 'polls:vote' question.id %}" method="post">
+    {% csrf_token %}
+    <!-- {% for choice in question.choice_set.all %}
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
+    {% endfor %} -->
+    First name: <input type="text" name="FirstName" value="Mickey"><br>
+    <input type="submit" value="Search" />
+</form>
